--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "browser-sync start --server --files scripts.js index.html",
     "copy:html": "cpy ./*.html ./build/",
     "copy:js": "cpy ./*.js ./build/",
-    "copy:css": "cpy ./css/**/* ./build/css/",
+    "copy:css": "cpy ./*.css ./build/",
     "copy:lib": "cpy ./lib/**/* ./build/lib/",
     "build": "concurrently npm:copy:*"
   },
